@@ -1,3 +1,7 @@
+2001-11-05  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl: corrected gridding in Options dialog
+
 2001-11-02  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl: added formatting of clock to local time, auto
